bk_ida/gccida/g0/dump_sbitmap
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_sbitmap/src/sbitmap.c:1037:10: error: use of undeclared identifier 'unk_80A560'
fwrite( &unk_80A560, 1uLL, 2uLL, file); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_sbitmap/src/obj/sbitmap.o] Error 1
